RESOLVED FIXED 113703
[CSS Regions] Content that has overflow: scroll cannot be scrolled by dragging the scroll thumbs with the mouse
https://bugs.webkit.org/show_bug.cgi?id=113703
Summary [CSS Regions] Content that has overflow: scroll cannot be scrolled by draggin...
Mihai Balan
Reported 2013-04-01 08:25:07 PDT
Created attachment 195974 [details] Test-case If a content node has a specified size and overflow: scroll and the content is larger than the specified size, scrollbars will be drawn. However, the content cannot be scrolled using the scrollbars, only using the scroll wheel, the cursor keys or (in Chrome) by pushing the middle mouse buttons. When moving the mouse cursor over the scrollbars they will react to the "hover", but clicking and dragging the scroll "thumb" will do nothing (thumb won't move, content won't scroll).
Attachments
Test-case (1.23 KB, text/html)
2013-04-01 08:25 PDT, Mihai Balan
no flags
patch (9.14 KB, patch)
2013-05-28 07:52 PDT, Mihai Maerean
darin: review+
darin: commit-queue-
patch for landing. (9.32 KB, patch)
2013-05-29 01:25 PDT, Mihai Maerean
commit-queue: commit-queue-
patch for landing. (9.32 KB, patch)
2013-05-29 02:03 PDT, Mihai Maerean
no flags
Mihai Maerean
Comment 1 2013-05-28 07:52:32 PDT
Darin Adler
Comment 2 2013-05-28 09:12:00 PDT
Comment on attachment 203055 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=203055&action=review r=me, but please fix the style issue > Source/WebCore/rendering/RenderBoxModelObject.cpp:2859 > + RenderRegion* startRegion, *endRegion; We never declare multiple variables on a single line like this. It’s particularly confusing style to do it with pointers, since we typically put the "*" by the type and ignore the fact that C syntax doesn’t work that way. This line of code forces the issue. Just use two separate definitions on two separate lines to do away with that potential confusion.
Mihai Maerean
Comment 3 2013-05-29 01:25:09 PDT
Created attachment 203136 [details] patch for landing.
WebKit Commit Bot
Comment 4 2013-05-29 01:31:56 PDT
Comment on attachment 203136 [details] patch for landing. Rejecting attachment 203136 [details] from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.appspot.com', '--bot-id=webkit-cq-03', 'validate-changelog', '--check-oops', '--non-interactive', 203136, '--port=mac']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit ChangeLog entry in LayoutTests/ChangeLog contains OOPS!. Full output: http://webkit-queues.appspot.com/results/677581
Mihai Maerean
Comment 5 2013-05-29 02:03:30 PDT
Created attachment 203140 [details] patch for landing.
WebKit Commit Bot
Comment 6 2013-05-29 03:56:53 PDT
Comment on attachment 203140 [details] patch for landing. Clearing flags on attachment: 203140 Committed r150881: <http://trac.webkit.org/changeset/150881>
Note You need to log in before you can comment on or make changes to this bug.